# BloggingPlatform-Django

./: .gitignore  README.md  devshell.toml  flake.nix  pyproject.toml
blog/blog/: settings.py  urls.py
blog/main/: README.md  models.py  serializers.py  urls.py  views.py
blog/main/migrations/: 0001_initial.py  0002_post.py
