[tool.poetry]
name = "bloggingplatformapi-django"
version = "0.1.0"
description = "A personal blogging platform API."
authors = ["Abdo .AlGhoul <Abdo.AlGhouul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
